--- a/myMuseum/src/main/resources/messages/message_IT.properties
+++ b/myMuseum/src/main/resources/messages/message_IT.properties
@@ -1,29 +1,20 @@
 required.artista.nome=Il nome e' un campo obbligatorio
 required.artista.cognome=Il cognome e' un campo obbligatorio
+required.collezione.nome=Il nome e' un campo obbligatorio
+required.collezione.descrizione=La descrizione e' un campo obbligatorio
+required.curatore.matricola=La matricola e' un campo obbligatorio
+duplicatoCuratore=Questa matricola e' gia' presente
 
-#duplicato=Questo prodotto esiste gia'
-#header.persona=Dettagli prodotto
-#header.persone=Elenco prodotti
-#header.index=Benvenuto
-#title.prodotto=Dettagli prodotto
-#title.prodotti=Elenco prodotti
-#title.formProdotto=Inserimento prodotto
-#pageTitle.prodotto=Pagina dettagli prodotto
-#index.login=Accedi
-#index.register=Registrati
-#header.registra=Registratione
-#header.menuUtente=Menu utente
-#header.menuAdmin=Menu amministratore
-##
-#required.user.nome=Il nome e' un campo obbligatorio
-#required.user.cognome=Il cognome e' un campo obbligatorio
-#required.credentials.username=Username e' un campo obbligatorio
-#required.credentials.password=Password e' un campo obbligatorio
-#size.user.nome=Il nome deve essere composto da minimo 2 e massimo 100 caratteri
-#size.user.cognome=Il cognome deve essere composto da minimo 2 e massimo 100 caratteri
-#size.credentials.username=Username deve essere composto da minimo 4 e massimo 20 caratteri
-#size.credentials.password=La password deve essere composta da minimo 6 e massimo 20 caratteri
-#duplicate.credentials.username=Questo username esiste gia'
+
+required.user.nome=Il nome e' un campo obbligatorio
+required.user.cognome=Il cognome e' un campo obbligatorio
+required.credentials.username=Username e' un campo obbligatorio
+required.credentials.password=Password e' un campo obbligatorio
+size.user.nome=Il nome deve essere composto da minimo 2 e massimo 100 caratteri
+size.user.cognome=Il cognome deve essere composto da minimo 2 e massimo 100 caratteri
+size.credentials.username=Username deve essere composto da minimo 4 e massimo 20 caratteri
+size.credentials.password=La password deve essere composta da minimo 6 e massimo 20 caratteri
+duplicate.credentials.username=Questo username esiste gia'
 
 
 msgArtista.nomeCognome=Artista:
@@ -36,6 +27,15 @@ msgArtista.luogoMorte=Luogo di morte:
 msgArtista.nazione=Nazione:
 msgArtista.biografia=Biografia:
 
+msgCuratore.matricola=Matricola:
+msgCuratore.nome=Nome:
+msgCuratore.cognome=Cognome:
+msgCuratore.dataNascita=Data di nascita:
+msgCuratore.luogoNascita=Luogo di nascita:
+msgCuratore.email=Email:
+msgCuratore.numeroTelefono=Numero di telefono:
+
+
 header.opere=Opere 
 header.curatore=Curatore
 header.artisti=Artisti
@@ -45,7 +45,8 @@ header.areaAdmin=Area admin
 header.artista=Artista
 header.collezione=Collezione
 header.benvenuto=Benvenuto!
-
+header.curatori=Curatori
+header.newAdmin=Inserisci nuovo admin
 
 msgCollezione.nome=Nome:
 msgCollezione.descrizione=Descrizione:
@@ -57,6 +58,7 @@ msgOpera.descrizione=Descrizione:
 
 msgAdmin.home=Benvenuto admin! Scegli una nuova azione...
 msgAdmin.NewCollezione=Crea collezione
+msgAdmin.NewCollezioneCuratore=Scegli curatore
 msgAdmin.EliminaCollezione=Elimina collezione
 msgAdmin.NewArtista=Aggiungi artista
 msgAdmin.EliminaArtista=Elimina artista
