--- a/myMuseum/src/main/resources/messages/message_IT.properties
+++ b/myMuseum/src/main/resources/messages/message_IT.properties
@@ -54,7 +54,7 @@ msgCollezione.descrizione=Descrizione:
 msgOpera.titolo=Titolo:
 msgOpera.anno=Anno:
 msgOpera.descrizione=Descrizione:
-
+msgOpera.immagine=Immagine:
 
 msgAdmin.home=Benvenuto admin! Scegli una nuova azione...
 msgAdmin.NewCollezione=Crea collezione
@@ -67,5 +67,6 @@ msgAdmin.EliminaOpera=Elimina opera
 msgAdmin.NewCuratore=Aggiungi curatore
 msgAdmin.EliminaCuratore=Elimina curatore
 msgAdmin.VisualizzaCuratori=Visualizza curatori
-
+msgAdmin.NewOperaCollezione=Scegli la collezione
+msgAdmin.NewOperaArtista=Scegli l'artista
 
