--- a/myMuseum/src/main/resources/messages/message_IT.properties
+++ b/myMuseum/src/main/resources/messages/message_IT.properties
@@ -47,6 +47,16 @@ header.collezione=Collezione
 header.benvenuto=Benvenuto!
 header.curatori=Curatori
 header.newAdmin=Inserisci nuovo admin
+header.presentazione=MyMuseum  e' uno fra i piu' importanti musei in Italia. Milioni di persone, ogni anno, arrivano da ogni angolo del mondo per ammirare le opere presenti qui a Citta' del Vaticano. Tra queste mura sono custodite le opere di importanti artisti, noti in tutto il mondo. Nelle sue stanze si trovano i capolavori di maestri come l'inventore Leonardo Da Vinci, il cupo Caravaggio e l'imponente Tiziano. Per non parlare di Michelangelo Buonarroti, indiscussa bandiera del Rinascimento Italiano
+header.orarioTi=Orario apertura
+header.orario=Lun-Ven 08:00-17:30
+header.comeArrivareTit=Come arrivare
+header.metro=Linea A direzione Battistini, fermate Ottaviano o Cipro
+header.bus=49, fermata piazzale antistante i Musei Vaticani
+header.tram=19, fermata Piazza del Risorgimento
+header.taxi=Stazione piazzale antistante i Musei Vaticani
+header.esplora=Nel museo...
+
 
 msgCollezione.nome=Nome:
 msgCollezione.descrizione=Descrizione:
