--- a/myMuseum/src/main/resources/messages/message_IT.properties
+++ b/myMuseum/src/main/resources/messages/message_IT.properties
@@ -5,6 +5,11 @@ required.collezione.descrizione=La descrizione e' un campo obbligatorio
 required.curatore.matricola=La matricola e' un campo obbligatorio
 duplicatoCuratore=Questa matricola e' gia' presente
 
+required.opera.titolo=Titolo e' un campo obbligatorio
+required.opera.descrizione=Descrizione e' un campo obbligatorio
+required.opera.anno=Anno e' un campo obbligatorio
+
+
 
 required.user.nome=Il nome e' un campo obbligatorio
 required.user.cognome=Il cognome e' un campo obbligatorio
